force-app/main/default/objects/CambioAsesor__c/CambioAsesor__c.object-meta.xml
<CustomObject>
    <description>Muestra el Cambio del asesor de un numero de cuenta, arrastrando un archivo excel</description>
    <label>CambioAsesor</label>
    <nameField>
        <label>Nombre de CambioAsesor</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CambioAsesores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>