force-app/main/default/objects/CambioAsesor__c/fields/Asesor_Actual__c.field-meta.xml
<CustomField>
    <fullName>Asesor_Actual__c</fullName>
    <description>Contiene el nombre del asesor actual del cliente.</description>
    <inlineHelpText>Contiene el nombre del asesor actual del cliente</inlineHelpText>
    <label>Asesor Actual</label>
    <length>16</length>
    <type>Text</type>
</CustomField>