force-app/main/default/objects/CambioAsesor__c/fields/Asesor_Nuevo__c.field-meta.xml
<CustomField>
    <fullName>Asesor_Nuevo__c</fullName>
    <description>Contiene el nuevo asesor del cliente.</description>
    <inlineHelpText>Contiene el nuevo asesor del cliente.</inlineHelpText>
    <label>Asesor Nuevo</label>
    <length>16</length>
    <type>Text</type>
</CustomField>