force-app/main/default/objects/CambioAsesor__c/fields/Descripcion__c.field-meta.xml
<CustomField>
    <fullName>Descripcion__c</fullName>
    <label>Descripcion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>