force-app/main/default/objects/CambioAsesor__c/fields/Empresa__c.field-meta.xml
<CustomField>
    <fullName>Empresa__c</fullName>
    <description>Contiene el nombre de la empresa al que pertenece el cliente</description>
    <inlineHelpText>Debe contener el nombre de la empresa al que pertenece el cliente</inlineHelpText>
    <label>Empresa</label>
    <length>150</length>
    <type>Text</type>
</CustomField>