force-app/main/default/objects/CambioAsesor__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <description>Contiene los diferentes estados que tiene el documento.</description>
    <inlineHelpText>Contiene los diferentes estados que tiene el documento.</inlineHelpText>
    <label>Estado</label>
    <length>8</length>
    <type>Text</type>
</CustomField>