force-app/main/default/objects/CambioAsesor__c/fields/Fecha_Inclusion_Carga__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Inclusion_Carga__c</fullName>
    <description>Captura la fecha del usuario que realiza la carga del archivo</description>
    <label>Fecha_Inclusion_Carga</label>
    <length>30</length>
    <type>Text</type>
</CustomField>