force-app/main/default/objects/CambioAsesor__c/fields/Identidad__c.field-meta.xml
<CustomField>
    <fullName>Identidad__c</fullName>
    <description>Contiene el numero de identificación del cliente.</description>
    <inlineHelpText>Contiene el numero de identificación del cliente.</inlineHelpText>
    <label>Identidad</label>
    <length>16</length>
    <type>Text</type>
</CustomField>