force-app/main/default/objects/CambioAsesor__c/fields/Identificador_Carga__c.field-meta.xml
<CustomField>
    <fullName>Identificador_Carga__c</fullName>
    <description>Identificador único por cada carga de archivo excel</description>
    <label>Identificador_Carga</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>