force-app/main/default/objects/CambioAsesor__c/fields/NoCuenta__c.field-meta.xml
<CustomField>
    <fullName>NoCuenta__c</fullName>
    <description>Contiene el numero de cuenta del cliente</description>
    <inlineHelpText>Contiene el numero de cuenta del cliente</inlineHelpText>
    <label>NoCuenta</label>
    <length>10</length>
    <type>Text</type>
</CustomField>