force-app/main/default/objects/CambioAsesor__c/fields/Nombre_Asesor_actual__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Asesor_actual__c</fullName>
    <description>Contiene el nombre del asesor</description>
    <inlineHelpText>Muestra el nombre del asesor actual</inlineHelpText>
    <label>Nombre Asesor actual</label>
    <length>40</length>
    <type>Text</type>
</CustomField>