force-app/main/default/objects/CambioAsesor__c/fields/Nombre_asesor_nuevo__c.field-meta.xml
<CustomField>
    <fullName>Nombre_asesor_nuevo__c</fullName>
    <description>Contiene el nombre del asesor nuevo.</description>
    <inlineHelpText>Muestra el nombre del asesor nuevo.</inlineHelpText>
    <label>Nombre asesor nuevo</label>
    <length>40</length>
    <type>Text</type>
</CustomField>