force-app/main/default/objects/CambioAsesor__c/fields/Nombre_Completo__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Completo__c</fullName>
    <description>Contiene el nombre completo al que corresponde</description>
    <inlineHelpText>Debe contener el nombre  completo del cliente</inlineHelpText>
    <label>Nombre_Completo</label>
    <length>80</length>
    <type>Text</type>
</CustomField>