force-app/main/default/objects/CambioAsesor__c/fields/Situaci_n__c.field-meta.xml
<CustomField>
    <fullName>Situaci_n__c</fullName>
    <description>Muestra si estan correctos los datos en la tabla</description>
    <inlineHelpText>Si a parece OK esta correcto, si aparece NO COINCIDE es que hay un error</inlineHelpText>
    <label>Situación</label>
    <length>80</length>
    <type>Text</type>
</CustomField>