force-app/main/default/objects/CambioAsesor__c/fields/Usuario__c.field-meta.xml
<CustomField>
    <fullName>Usuario__c</fullName>
    <description>Usuario para pantalla Cambio de Asesor</description>
    <inlineHelpText>Para definir el usuario que realiza la carga.</inlineHelpText>
    <label>Usuario</label>
    <length>50</length>
    <type>Text</type>
</CustomField>